; ModuleID = '/home/carl/AnghaBench/linux/net/netfilter/extr_xt_hashlimit.c_hashlimit_mt_check.c'
source_filename = "/home/carl/AnghaBench/linux/net/netfilter/extr_xt_hashlimit.c_hashlimit_mt_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xt_mtchk_param = type { %struct.xt_hashlimit_mtinfo3* }
%struct.xt_hashlimit_mtinfo3 = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xt_mtchk_param*)* @hashlimit_mt_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hashlimit_mt_check(%struct.xt_mtchk_param* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.xt_mtchk_param*, align 8
  %4 = alloca %struct.xt_hashlimit_mtinfo3*, align 8
  %5 = alloca i32, align 4
  store %struct.xt_mtchk_param* %0, %struct.xt_mtchk_param** %3, align 8
  %6 = load %struct.xt_mtchk_param*, %struct.xt_mtchk_param** %3, align 8
  %7 = getelementptr inbounds %struct.xt_mtchk_param, %struct.xt_mtchk_param* %6, i32 0, i32 0
  %8 = load %struct.xt_hashlimit_mtinfo3*, %struct.xt_hashlimit_mtinfo3** %7, align 8
  store %struct.xt_hashlimit_mtinfo3* %8, %struct.xt_hashlimit_mtinfo3** %4, align 8
  %9 = load %struct.xt_hashlimit_mtinfo3*, %struct.xt_hashlimit_mtinfo3** %4, align 8
  %10 = getelementptr inbounds %struct.xt_hashlimit_mtinfo3, %struct.xt_hashlimit_mtinfo3* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @xt_check_proc_name(i32 %11, i32 4)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %1
  %16 = load i32, i32* %5, align 4
  store i32 %16, i32* %2, align 4
  br label %27

17:                                               ; preds = %1
  %18 = load %struct.xt_mtchk_param*, %struct.xt_mtchk_param** %3, align 8
  %19 = load %struct.xt_hashlimit_mtinfo3*, %struct.xt_hashlimit_mtinfo3** %4, align 8
  %20 = getelementptr inbounds %struct.xt_hashlimit_mtinfo3, %struct.xt_hashlimit_mtinfo3* %19, i32 0, i32 2
  %21 = load %struct.xt_hashlimit_mtinfo3*, %struct.xt_hashlimit_mtinfo3** %4, align 8
  %22 = getelementptr inbounds %struct.xt_hashlimit_mtinfo3, %struct.xt_hashlimit_mtinfo3* %21, i32 0, i32 1
  %23 = load %struct.xt_hashlimit_mtinfo3*, %struct.xt_hashlimit_mtinfo3** %4, align 8
  %24 = getelementptr inbounds %struct.xt_hashlimit_mtinfo3, %struct.xt_hashlimit_mtinfo3* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @hashlimit_mt_check_common(%struct.xt_mtchk_param* %18, i32* %20, i32* %22, i32 %25, i32 3)
  store i32 %26, i32* %2, align 4
  br label %27

27:                                               ; preds = %17, %15
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i32 @xt_check_proc_name(i32, i32) #1

declare dso_local i32 @hashlimit_mt_check_common(%struct.xt_mtchk_param*, i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
